<resources>
    <!--General-->
    <string name="app_name">Cat Quiz</string>
    <string name="name">Name</string>
    <string name="select_all_checkboxes">(You must select all correct answers to win the point.)</string>
    <string name="select_all_true_statements">Select all of the statements that are true..</string>
    <string name="type_answer">(Type your answer into the text box)</string>
    <string name="a_true">True</string>
    <string name="a_false">False</string>
    <string name="yes_no">Yes/No</string>
    <string name="cat_breed">Cat Breed</string>

    <!--Toast messages-->
    <string name="choose_difficulty_toast">Please choose a difficulty setting</string>
    <string name="max_questions_toast">Max number of questions</string>
    <string name="min_questions_toast">Min number of questions</string>
    <string name="toast_answer_all_questions">Answer all questions to continue</string>
    <string name="score_toast">You have scored %1$d out of %2$d!</string>

    <!--Button Text-->
    <string name="start_quiz_button">Start Quiz</string>
    <string name="send_score_button">Send Score</string>
    <string name="play_again_button">Play Again</string>
    <string name="restart_button">Restart</string>
    <string name="next_button">Next</string>
    <string name="submit_button">Submit</string>

    <!--Settings Page-->
    <string name="options">Options:</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="level_easy">Kitten</string>
    <string name="level_medium">Street Cat</string>
    <string name="level_hard">Cattenborough</string>
    <string name="number_of_questions">Number of Questions:</string>

    <!--Results Page & email-->
    <string name="you_scored">You Scored:</string>
    <string name="results_message">Here is a summary of questions answered:</string>
    <string name="incorrect">Incorrect</string>
    <string name="correct">Correct</string>
    <string name="results_Q1">Question 1: \u0020</string>
    <string name="results_Q2">Question 2: \u0020</string>
    <string name="results_Q3">Question 3: \u0020</string>
    <string name="results_Q4">Question 4: \u0020</string>
    <string name="results_Q5">Question 5: \u0020</string>
    <string name="results_Q6">Question 6: \u0020</string>
    <string name="results_Q7">Question 7: \u0020</string>
    <string name="results_Q8">Question 8: \u0020</string>
    <string name="results_Q9">Question 9: \u0020</string>
    <string name="results_Q10">Question 10: \u0020</string>
    <string name="result_banner1">Catastrophic Failure!</string>
    <string name="result_banner2">Try Harder!</string>
    <string name="result_banner3">Not Bad</string>
    <string name="result_banner4">Well done!</string>
    <string name="result_banner5">Puuuuurrrfect!!</string>
    <string name="percent">%1$d%2$s</string>
    <string name="correct_answers">With %1$d out of %2$d correct answers.</string>
    <string name="display_level">On difficulty level: %1$s</string>
    <string name="level_1">Easy</string>
    <string name="level_2">Medium</string>
    <string name="level_3">Hard</string>
    <string name="email_title">Cat Quiz Score for \u0020</string>
    <string name="email_score_message">\u0020 answered %1$d out of %2$d questions correctly, scoring a total of %3$d%4$s on %5$s level. </string>


    <!--Question pages title info bar -->
    <string name="questions1_5">Questions 1–5 of \u0020</string>
    <string name="questions6_10">Questions 6–10 of \u0020</string>
    <string name="questions11_15">Questions 11–15 of \u0020</string>
    <string name="questions16_20">Questions 16–20 of \u0020</string>

    <!--Question pages question numbers-->
    <string name="question_1">Question 1.</string>
    <string name="question_2">Question 2.</string>
    <string name="question_3">Question 3.</string>
    <string name="question_4">Question 4.</string>
    <string name="question_5">Question 5.</string>
    <string name="question_6">Question 6.</string>
    <string name="question_7">Question 7.</string>
    <string name="question_8">Question 8.</string>
    <string name="question_9">Question 9.</string>
    <string name="question_10">Question 10.</string>

    <!--Questions & Answers text- Easy Mode-->
    <string name="question_E1">What do you call a male cat?</string>
    <string name="ansE1_1">Jack</string>
    <string name="ansE1_2">Tom</string>
    <string name="ansE1_3">Dave</string>
    <string name="ansE1_4">Prince</string>

    <string name="question_E2">How many lives is a cat commonly said to have?</string>

    <string name="question_E3">A cats\' diet makes it a..</string>
    <string name="ansE3_1">Herbivore</string>
    <string name="ansE3_2">Omnivore</string>
    <string name="ansE3_3">Carnivore</string>

    <string name="question_E4">Which of these senses are enhanced in cats compared with humans?</string>
    <string name="ansE4_1">Smell</string>
    <string name="ansE4_2">Sight in low light</string>
    <string name="ansE4_3">Touch</string>
    <string name="ansE4_4">Hearing</string>
    <string name="ansE4_5">Taste for sweet foods</string>

    <string name="question_E5">Cats have retractable claws:</string>

    <string name="question_E6">Which of these is NOT a breed of cat?</string>
    <string name="ansE6_1">Tabby</string>
    <string name="ansE6_2">Persian</string>
    <string name="ansE6_3">Siamese</string>
    <string name="ansE6_4">Bengal</string>

    <string name="question_E7">Can cats be trained to use a toilet?</string>

    <string name="question_E8">How long on average do indoor cats live?</string>
    <string name="ansE8_1">8 years</string>
    <string name="ansE8_2">15 years</string>
    <string name="ansE8_3">22 years</string>

    <string name="question_E9">Which of these are signs your cat likes you?</string>
    <string name="ansE9_1">Wagging tail</string>
    <string name="ansE9_2">Purring</string>
    <string name="ansE9_3">Butting his/her head on you</string>
    <string name="ansE9_4">Laying on his/her back with belly exposed</string>
    <string name="ansE9_5">Ears laid back</string>

    <string name="question_E10">Cats typically sleep for around 1/3 of the day..</string>


    <!--Questions & Answers text- Medium Mode-->
    <string name="question_M1">Which of these are breeds of cat?</string>
    <string name="ansM1_1">Bengal</string>
    <string name="ansM1_2">Chinese Longhair</string>
    <string name="ansM1_3">Ragdoll</string>
    <string name="ansM1_4">Russian Blue</string>
    <string name="ansM1_5">Danish White</string>

    <string name="question_M2">Some cats do have thumbs</string>

    <string name="question_M3">What might a female cat be known as?</string>
    <string name="ansM3_1">Duchess</string>
    <string name="ansM3_2">Queen</string>
    <string name="ansM3_3">Princess</string>
    <string name="ansM3_4">Empress</string>

    <string name="question_M4">Can cats taste sweet things?</string>

    <string name="question_M5">How much of their lives do cats typically sleep?</string>
    <string name="ansM5_1">30%</string>
    <string name="ansM5_2">50%</string>
    <string name="ansM5_3">70%</string>

    <string name="question_M6">Are tortoiseshell cats usually male or female?</string>
    <string name="ansM6_1">Almost always male</string>
    <string name="ansM6_2">Almost always female</string>
    <string name="ansM6_3">Slightly higher chance of being male</string>
    <string name="ansM6_4">Equal chance of being male or female</string>

    <string name="question_M7">Name a domestic cat breed with no tail?</string>

    <string name="question_M8">Should cats be given milk?</string>
    <string name="ansM8_1">Yes, milk is good for cats</string>
    <string name="ansM8_2">Yes, but only full fat milk.</string>
    <string name="ansM8_3">No, cats are lactose intolerant</string>
    <string name="ansM8_4">No, milk is poisonous to cats</string>

    <string name="question_M9">Which of these are poisonous to cats?</string>
    <string name="ansM9_1">Chocolate</string>
    <string name="ansM9_2">Garlic</string>
    <string name="ansM9_3">Roses</string>
    <string name="ansM9_4">Lilies</string>
    <string name="ansM9_5">Banana</string>

    <string name="question_M10">Cats sweat only through their paws</string>


    <!--Questions & Answers text- Hard Mode-->
    <string name="ansH1_1">A cat\'s paw print is unique like our finger prints.</string>
    <string name="ansH1_2">A cat\'s nose print is unique like our finger prints.</string>
    <string name="ansH1_3">The cat flap was invented by Sir Isaac Newton.</string>
    <string name="ansH1_4">Cats can see in three times the colour range that humans can.</string>
    <string name="ansH1_5">Cats have been used for mail delivery.</string>
    <string name="ansH1_6">Cats have around 40 different vocalisations.</string>

    <string name="question_H2">A cat\'s jaw can\'t move sideways..</string>

    <string name="question_H3">What do you call a group of cats?</string>
    <string name="ansH3_1">Pack</string>
    <string name="ansH3_2">Troop</string>
    <string name="ansH3_3">Cast</string>
    <string name="ansH3_4">Colony</string>
    <string name="ansH3_5">Clowder</string>
    <string name="ansH3_6">Covey</string>

    <string name="question_H4">How many colours does the Calico coat have?</string>

    <string name="question_H5">Adult cats \'Meow\' to get the attention of..</string>
    <string name="ansH5_1">Only other cats</string>
    <string name="ansH5_2">Only humans</string>
    <string name="ansH5_3">Other cats and humans</string>
    <string name="ansH5_4">All other animals/cats/humans</string>

    <string name="question_H6">What is \'allogrooming' in cats?</string>
    <string name="ansH6_1">When cats groom too much through stress</string>
    <string name="ansH6_2">When cats groom each other</string>
    <string name="ansH6_3">When a cat asserts authority over another cat</string>
    <string name="ansH6_4">When a cat hasn\'t learned how to groom properly</string>

    <string name="question_H7">How old did the world\'s oldest ever domestic cat live to be?</string>

    <string name="question_H8">How many toes in total do cats usually have?</string>
    <string name="ansH8_1">16</string>
    <string name="ansH8_2">18</string>
    <string name="ansH8_3">20</string>
    <string name="ansH8_4">22</string>
    <string name="ansH8_5">24</string>

    <string name="ansH9_1">All kittens are born deaf</string>
    <string name="ansH9_2">When a cats tail is raised and vibrates at the tip, he/she is angry</string>
    <string name="ansH9_3">Male cats are more likely to be left-pawed, and female cats are more likely to be right-pawed</string>
    <string name="ansH9_4">Cats cannot climb down trees head first</string>
    <string name="ansH9_5">Female cats are more sensitive to catnip than males.</string>

    <string name="question_H10">Cats have tiny barbs on their tongues called \'Melanocytes\'.</string>



</resources>