<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.catquiz.MainActivityE2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img_banner_M2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/header_height"
            android:scaleType="centerCrop"
            android:src="@drawable/cat1" />


        <TextView
            android:id="@+id/tv_questions_qty_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_M"
            android:layout_marginTop="@dimen/margin_M"
            android:background="@color/lime"
            android:padding="@dimen/padding_S"
            android:text="Questions 6 - 10"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_M" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_M"
            android:background="@drawable/shape2"
            android:orientation="vertical"
            android:padding="@dimen/padding_SM">

            <TextView
                style="@style/QuestionNumTextViewStyle"
                android:text="@string/question_6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_S"
                android:layout_marginTop="@dimen/margin_S"
                android:text="@string/question_M6"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_M" />

            <RadioGroup
                android:id="@+id/rg_question_M6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_qM6_option_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_M"
                    android:paddingLeft="@dimen/padding_L"
                    android:text="@string/ansM6_1"
                    android:textSize="@dimen/text_M" />

                <RadioButton
                    android:id="@+id/rb_qM6_option_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_M"
                    android:paddingLeft="@dimen/padding_L"
                    android:text="@string/ansM6_2"
                    android:textSize="@dimen/text_M" />

                <RadioButton
                    android:id="@+id/rb_qM6_option_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_M"
                    android:paddingLeft="@dimen/padding_L"
                    android:text="@string/ansM6_3"
                    android:textSize="@dimen/text_M" />

                <RadioButton
                    android:id="@+id/rb_qM6_option_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_M"
                    android:paddingLeft="@dimen/padding_L"
                    android:text="@string/ansM6_4"
                    android:textSize="@dimen/text_M" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_M"
            android:background="@drawable/shape2"
            android:orientation="vertical"
            android:padding="@dimen/padding_SM">

            <TextView
                style="@style/QuestionNumTextViewStyle"
                android:text="@string/question_7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_S"
                android:layout_marginTop="@dimen/margin_S"
                android:text="@string/question_M7"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_M" />

            <EditText
                android:id="@+id/et_question_M7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_S"
                android:layout_marginLeft="@dimen/margin_S"
                android:layout_marginTop="@dimen/margin_S"
                android:background="#f7eff4"
                android:hint="@string/cat_breed"
                android:inputType="textCapWords"
                android:maxLength="30"
                android:padding="@dimen/text_M" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_M"
            android:background="@drawable/shape2"
            android:orientation="vertical"
            android:padding="@dimen/padding_SM">

            <TextView
                style="@style/QuestionNumTextViewStyle"
                android:text="@string/question_8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_S"
                android:layout_marginTop="@dimen/margin_S"
                android:text="@string/question_M8"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_M" />

            <RadioGroup
                android:id="@+id/rg_question_M8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_qM8_option_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_M"
                    android:paddingLeft="@dimen/padding_L"
                    android:text="@string/ansM8_1"
                    android:textSize="@dimen/text_M" />

                <RadioButton
                    android:id="@+id/rb_qM8_option_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_M"
                    android:paddingLeft="@dimen/padding_L"
                    android:text="@string/ansM8_2"
                    android:textSize="@dimen/text_M" />

                <RadioButton
                    android:id="@+id/rb_qM8_option_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_M"
                    android:paddingLeft="@dimen/padding_L"
                    android:text="@string/ansM8_3"
                    android:textSize="@dimen/text_M" />

                <RadioButton
                    android:id="@+id/rb_qM8_option_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_M"
                    android:paddingLeft="@dimen/padding_L"
                    android:text="@string/ansM8_4"
                    android:textSize="@dimen/text_M" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_M"
            android:background="@drawable/shape2"
            android:orientation="vertical"
            android:padding="@dimen/padding_SM">

            <TextView
                style="@style/QuestionNumTextViewStyle"
                android:text="@string/question_9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_S"
                android:layout_marginTop="@dimen/margin_S"
                android:text="@string/question_M9"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_M" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_S"
                android:text="@string/select_all_checkboxes"
                android:textAllCaps="false"
                android:textSize="@dimen/text_M" />

            <CheckBox
                android:id="@+id/cb_qM9_option_1"
                style="@style/QuizCheckBoxStyle"
                android:text="@string/ansM9_1" />

            <CheckBox
                android:id="@+id/cb_qM9_option_2"
                style="@style/QuizCheckBoxStyle"
                android:text="@string/ansM9_2" />

            <CheckBox
                android:id="@+id/cb_qM9_option_3"
                style="@style/QuizCheckBoxStyle"
                android:text="@string/ansM9_3" />

            <CheckBox
                android:id="@+id/cb_qM9_option_4"
                style="@style/QuizCheckBoxStyle"
                android:text="@string/ansM9_4" />

            <CheckBox
                android:id="@+id/cb_qM9_option_5"
                style="@style/QuizCheckBoxStyle"
                android:text="@string/ansM9_5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_M"
            android:background="@drawable/shape2"
            android:orientation="vertical"
            android:padding="@dimen/padding_SM">

            <TextView
                style="@style/QuestionNumTextViewStyle"
                android:text="@string/question_10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_S"
                android:layout_marginTop="@dimen/margin_S"
                android:text="@string/question_M10"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_M" />

            <RadioGroup
                android:id="@+id/rg_question_M10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_qM10_option_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_M"
                    android:paddingLeft="@dimen/padding_L"
                    android:text="@string/a_true"
                    android:textSize="@dimen/text_M" />

                <RadioButton
                    android:id="@+id/rb_qM10_option_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_M"
                    android:paddingLeft="@dimen/padding_L"
                    android:text="@string/a_false"
                    android:textSize="@dimen/text_M" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_L"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_restart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_XL"
                android:layout_marginRight="@dimen/margin_M"
                android:layout_weight="1"
                android:background="@drawable/restart_button"
                android:onClick="restart"
                android:text="@string/restart_button"
                android:textSize="@dimen/text_M" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_XL"
                android:layout_marginRight="@dimen/margin_M"
                android:layout_weight="1"
                android:background="@drawable/next_button_green"
                android:onClick="submit"
                android:text="@string/next_button"
                android:textSize="@dimen/text_M" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>