<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.catquiz.StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:background="@color/white"
            android:src="@drawable/cats" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_M"
            android:background="@color/white"
            android:fontFamily="@font/catfont"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/padding_SM"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/text_XXXL" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_S"
            android:layout_marginTop="@dimen/margin_L"
            android:text="@string/options"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_M" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_M"
            android:layout_marginLeft="@dimen/margin_XXL"
            android:layout_marginRight="@dimen/margin_XXL"
            android:layout_marginTop="@dimen/margin_M"
            android:actionProviderClass="android.widget.ShareActionProvider"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:padding="@dimen/padding_SM">


            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_M"
            android:layout_marginLeft="@dimen/margin_XXL"
            android:layout_marginRight="@dimen/margin_XXL"
            android:layout_marginTop="@dimen/margin_M"
            android:background="@drawable/shape2"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/padding_SM">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_M"
                android:layout_marginTop="@dimen/margin_M"
                android:text="@string/difficulty_level"
                android:textAllCaps="true"
                android:textSize="@dimen/text_M" />

            <RadioGroup
                android:id="@+id/rg_set_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_easy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_M"
                    android:paddingLeft="@dimen/padding_L"
                    android:text="@string/level_easy"
                    android:textSize="@dimen/text_M" />

                <RadioButton
                    android:id="@+id/rb_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_M"
                    android:paddingLeft="@dimen/padding_L"
                    android:text="@string/level_medium"
                    android:textSize="@dimen/text_M" />

                <RadioButton
                    android:id="@+id/rb_hard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_M"
                    android:paddingLeft="@dimen/padding_L"
                    android:text="@string/level_hard"
                    android:textSize="@dimen/text_M" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_M"
            android:layout_marginLeft="@dimen/margin_XXL"
            android:layout_marginRight="@dimen/margin_XXL"
            android:layout_marginTop="@dimen/margin_M"
            android:actionProviderClass="android.widget.ShareActionProvider"
            android:background="@drawable/shape3"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/padding_M">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_questions"
                android:textAllCaps="true"
                android:textSize="@dimen/text_M" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_M"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_subtract_questions"
                    android:layout_width="@dimen/add_button_M"
                    android:layout_height="@dimen/add_button_M"
                    android:background="@drawable/next_button_blue"
                    android:onClick="decrement"
                    android:text="-"
                    android:textSize="@dimen/text_L" />

                <TextView
                    android:id="@+id/tv_set_questions_qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_L"
                    android:layout_marginRight="@dimen/margin_L"
                    android:text="5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_M" />

                <Button
                    android:id="@+id/btn_add_questions"
                    android:layout_width="@dimen/add_button_M"
                    android:layout_height="@dimen/add_button_M"
                    android:background="@drawable/next_button_blue"
                    android:onClick="increment"
                    android:text="+"
                    android:textSize="@dimen/text_L" />
            </LinearLayout>


        </LinearLayout>


        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_M"
            android:background="@drawable/next_button"
            android:onClick="startQuiz"
            android:text="@string/start_quiz_button"
            android:textSize="@dimen/text_M" />


    </LinearLayout>
</ScrollView>